# dietruth

./: .gitignore  Procfile  README.md  pyproject.toml  run.sh
assets/: favicon.xcf
project/: manage.py
project/core/: context_processors.py  forms.py  middlewares.py  models.py  util.py  views.py
project/core/migrations/: 0001_initial.py  0002_remove_roll_updated_at_roll_randomdata_roll_result_and_more.py  0003_roll_modifier.py  0004_roll_description.py  0005_alter_roll_description.py
project/core/roll/: parse.py  roll.py  rpc.py
project/dietruth/: asgi.py  settings.py  urls.py  wsgi.py
project/templates/: base.html
project/templates/core/: get_roll.html  home.html  login.html  logout.html
tests/: test_dietruth.py
